// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Input" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="input-group css-txgkx1"
  >
    <div
      className="css-4qql51-Input"
    >
      <input
        className="wireinput css-1aqzzyv"
      />
    </div>
  </div>
</div>
`;

exports[`"Input" renders as disabled 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="input-group css-txgkx1"
  >
    <div
      className="css-4qql51-Input"
    >
      <input
        className="wireinput css-1rvq0cq"
        disabled={true}
      />
    </div>
  </div>
</div>
`;

exports[`"Input" renders as invalid 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="input-group css-txgkx1"
  >
    <div
      className="css-4qql51-Input"
    >
      <input
        className="wireinput css-ofh3qg"
      />
    </div>
  </div>
</div>
`;

exports[`"Input" renders with placeholderTextTransform 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="input-group css-txgkx1"
  >
    <div
      className="css-4qql51-Input"
    >
      <input
        className="wireinput css-uxyw8l"
        placeholder="Input"
      />
    </div>
  </div>
</div>
`;
